--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 	
 	<footer>
 		<a href="#" class="left">Contact</a>
-		<a href="#" class="right">Donate</a>
+		<%= link_to 'Donate', page_path('donate'), class: "right" %>
 		<div>
 			<p>Final project | <i>Multimedia Design &amp; Communication '15</i></p>
 			<p>&copy; Marie Crabit | 2015</p>
