--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,6 +10,8 @@
 	</div>
 </div>
 
+<!-- TODO: show all controls button when there is a touchscreen involved -->
+
 <div class="task-wrapper">
 <!-- TODO: me no satisfied... -->
   <div class="left task-list-part">
