--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="wrapper">
 	<div class="profile-information gradient">
-		<div class="left">
+		<div class="left profile-image-wrap">
 			<div class="profile-picture" style="background-image: url(<%= image_path @user.avatar.url %>);">
 				<!--TODO: correct to only compare day and month -->
 				<% if @user.birthdate.day == Date.today.day && @user.birthdate.month == Date.today.month %>
@@ -24,6 +24,7 @@
 				%>
 			</p>
 			<p>Gender: <%= @user.gender %></p>
+			
 			<div class="user-edit">
 				<% if @user == current_user %>
 					<%= link_to image_tag("icons/Pencil-icon.png"), edit_user_registration_path, class: "left" %>
