--- a/app/views/groups/choose_user.html.erb
+++ b/app/views/groups/choose_user.html.erb
@@ -10,7 +10,7 @@
 			</div>
 		</div>
 		
-		<button type="button" class="add-user-button add-remove-extra-user-field">Add user field</button>
+		<button type="button" class="add-user-button add-remove-extra-user-field">Add more</button>
 	</div>
 	
 	<div class="actions">
