--- a/app/views/tasks/_comments.html.erb
+++ b/app/views/tasks/_comments.html.erb
@@ -7,7 +7,7 @@
 	<!-- here is the list to choose from -->
 	<div>
 		<div class="stamp-toggle">
-			<%= image_tag ("icons/Speach-Bubble-icon.png") %>
+			<%= image_tag("icons/Speach-Bubble-icon.png") %>
 			<p>Leave your stamp!</p>
 		</div>
 	
@@ -77,7 +77,7 @@
 	
 <!-- TODO: button style not applied o.O -->
 			<div class="actions">
-				<%= f.submit class: "button, stamp-submit" %>
+				<%= f.submit class: "button stamp-submit", value: "Post stamp" %>
 			</div>
 		</div>
 	
