--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -42,9 +42,8 @@
 	<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
 	<div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
 	<% end %>
-	<br>
 	<div class="field">
-		<%= f.label :password %> <!-- <i>(leave blank if you don't want to change it)</i><br /> -->
+		New <%= f.label :password %> <!-- <i>(leave blank if you don't want to change it)</i><br /> -->
 		<%= f.password_field :password, autocomplete: "off" %>
 	</div>
 
@@ -52,9 +51,10 @@
 		<%= f.label :password_confirmation %>
 		<%= f.password_field :password_confirmation, autocomplete: "off" %>
 	</div>
-
-	<div class="field">
+	<br>
+	<div class="current-password-required-field">
 		<%= f.label :current_password %>* <!-- <i>(we need your current password to confirm your changes)</i> -->
+		<br>
 		<%= f.password_field :current_password, autocomplete: "off" %>
 	</div>
 
