--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,20 +36,19 @@
 	<div class="field">
 		<%= f.label :password %> *
 		<% if @validatable %>
-		<!-- <i>(<%= @minimum_password_length %> characters minimum)</i>
-			<% end %><br/> -->
 			<%= f.password_field :password, autocomplete: "off" %>
-		</div>
+			<% end %>
+	</div>
 
-		<div class="field">
-			<%= f.label :password_confirmation %> *<!-- <br/> -->
+	<div class="field">
+			<%= f.label :password_confirmation %> *
 			<%= f.password_field :password_confirmation, autocomplete: "off" %>
-		</div>
+	</div>
 
-		<div class="actions">
+	<div class="actions">
 			<%= f.submit "Sign up" %>
-		</div>
-		<% end %>
+	</div>
+	<% end %>
 
 		<%= render "devise/shared/links" %>
 	</div>
