--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,12 +4,19 @@
 		<%= link_to "Add new task", new_task_path, class: "left" %>
 	</div>
 	
-	<%= link_to "Edit task assignment", edit_assignments_path, class: "left" %>
-	<%= link_to "Autoassign tasks", auto_assignments_path, class: "left", disabled: @group.auto_assigned_at? %>
+	<div class="link-with-icon left">
+		<%= link_to image_tag("icons/Gears-icon.png"), edit_assignments_path, class: "left" %>
+		<%= link_to "Edit task assignment", edit_assignments_path, class: "left" %>
+	</div>
 	
 	<div class="link-with-icon right">
 		<%= link_to image_tag("icons/Speach-Bubble-icon.png"), new_task_path, class: "right comment-toggler" %>
 		<%= link_to "Show comments", new_task_path, class: "right comment-toggler" %>
+	</div>
+	
+	<div class="link-with-icon right">
+		<%= link_to image_tag("icons/Arrow-icon.png"), auto_assignments_path, class: "right", disabled: @group.auto_assigned_at? %>
+		<%= link_to "Autoassign tasks", auto_assignments_path, class: "right", disabled: @group.auto_assigned_at? %>
 	</div>
 </div>
 
