--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -24,7 +24,7 @@
 	</div>
 	<br>
 	<div class="field">
-		<%= label_tag :add_suggested_tasks, "Add suggested tasks", title: "YO!" %>?
+		<%= label_tag :add_suggested_tasks, "Add suggested tasks", title: "You can choose tasks from a premade list, if you check of this box" %>?
 		<%= check_box_tag :add_suggested_tasks %>
 	</div>
 		
