--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,6 +53,14 @@ header {
 		margin-top: -10px;
 	}
 	
+	img {
+		width: 100px;
+		
+		@media screen and (max-width: 365px) {
+			width: 80px;
+		}
+	}
+	
 	@media screen and (max-width: 365px) {
 		width: 80px;
 	}
