--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -305,7 +305,7 @@ a {
 	position: relative;
 	height: 400px;
 	max-width: 1500px;
-	background-image: url("./dishes.png");
+	background-image: image-url("dishes.png");
 	background-size: cover;
 	background-position: center;
 	margin-top: 1rem;
