Add contact form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 	
 	<footer>
 		<div class="footer-link-wrap">
-			<a href="#" class="left">Contact</a>
+      <%= link_to "Contact", contact_path, class: "left" %>
 			<%= link_to 'Donate', page_path('donate'), class: "right" %>
 		</div>
 		<div>
