--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -1,3 +1,5 @@
+<div class="form-wrapper">
+	<h2>Email me!</h2>
 <%= form_tag contact_path, method: :post do %>
   <div class="field">
     <%= label_tag "Your name" %>
@@ -23,3 +25,4 @@
     <%= submit_tag "Send" %>
   </div>
 <% end %>
+</div>
