--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -174,7 +174,7 @@ nav {
 			width: 100%;
 		}
     
-		input, select {
+		input, select, textarea {
 			position: absolute;
 			right: 0;
 			width: 150px;
